# bachata_buddy

./: .cursorignore  .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  BLUEPRINT_ARCHITECTURE_STATUS.md  BLUEPRINT_PERSISTENCE_STRATEGY.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  Dockerfile  Dockerfile.dev  EMBEDDINGS_COMPLETE.md  FINAL_SUMMARY.md  FORCE_PUSH_INSTRUCTIONS.md  HACKATHON_SUBMISSION.md  LEGACY_CLEANUP_GUIDE.md  MANUAL_FORCE_PUSH_GUIDE.md  MEDIA_CLEANUP_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SECURITY_AUDIT_FINDINGS.md  check_system.sh  clean_git_history.sh  cleanup_legacy.sh  cleanup_secrets.sh  cloudbuild.yaml  conftest.py  docker-compose.yml  execute_pipeline.py  health_check.py  load_embeddings_to_db.py  manage.py  pre_deployment_check.sh  pyproject.toml  pytest.ini  remove_google_references.sh  remove_old_media_files.sh  (+7 more)
ai_services/: README.md
bachata-choreography-generator/: .gitignore  DJANGO_SETUP_GUIDE.md  README.md  conftest.py  init_database.py  main.py  manage.py  proposal_better_embeddings.md  pyproject.toml  pytest.ini  run_dev_server.py  run_tests.py  setup_uv_environment.py  start_clean_server.py
bachata_buddy/: asgi.py  settings.py  urls.py  wsgi.py
backend/: .coveragerc  .env.example  .github-workflows-example.yml  .gitignore  API_DOCUMENTATION_UPDATE.md  BLUEPRINT_SCHEMA_CONSISTENCY_VERIFICATION.md  Dockerfile  Dockerfile.dev  Dockerfile.gpu  PATH1_PATH2_TEST_RESULTS.md  PATH1_VERIFICATION_SUMMARY.md  README.md  build_gpu_image.sh  conftest.py  coverage.json  create_test_moves.py  generate_and_load_embeddings.py  generate_embeddings_to_json.py  generate_real_embeddings.py  load_embeddings_from_json.py  music_analyzer.py  pyproject.toml  pytest.ini  run_comprehensive_tests.sh  run_local_job.py  schema.yml  setup_env.sh  test_blueprint_flow.py  test_blueprint_performance.py  test_gpu_integration.py  test_job_trigger_with_blueprint.py  test_path1_path2_e2e.py
backend/api/: asgi.py  settings.py  urls.py  wsgi.py
backend/apps/authentication/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py
backend/apps/choreography/: admin.py  apps.py  mock_urls.py  mock_views.py  models.py  serializers.py  test_e2e_integration.py  test_path1_agent_bypass_properties.py  test_views_coverage.py  tests.py  urls.py  views.py
backend/apps/choreography/migrations/: 0001_initial.py  0002_song.py  0003_choreographytask_song.py  0004_moveembedding.py  0005_blueprint.py  0006_remove_job_execution_name.py
backend/apps/collections/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/collections/migrations/: 0001_initial.py  __init__.py
backend/apps/instructors/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/instructors/migrations/: 0001_initial.py  __init__.py
backend/core/: middleware.py  pagination.py  permissions.py
backend/data/songs/: .gitkeep  README.md
backend/fixtures/: songs.json
backend/scripts/: README.md  connect_cloud_sql.py
backend/services/: JOBS_SERVICE_BLUEPRINT_UPDATE.md  __init__.py  agent_service.py  blueprint_generator.py  elasticsearch_service.py  ffmpeg_builder.py  gemini_service.py  gpu_utils.py  jobs_service.py  mock_job_service.py  parameter_extractor.py  song_selector.py  storage_service.py  task_status_updater.py  test_agent_service_properties.py  test_blueprint_generator.py  test_blueprint_job_integration.py  test_ffmpeg_builder_properties.py  test_jobs_service.py  test_jobs_service_logging.py  test_jobs_service_retry.py  test_parameter_extractor_properties.py  test_task_status_updater.py  test_vector_search_service.py  test_video_assembly_properties.py  vector_search_service.py  video_assembly_service.py
backend/services/storage/: __init__.py  base.py  factory.py  local.py  s3.py  test_storage_properties.py
backend/templates/instructors/: class_plan_export.html
choreography/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
common/: README.md  __init__.py  exceptions.py
core/: apps.py
data/: bachata_annotations.json  embeddings_backup.json  move_embeddings.json  test_export.csv  test_import.json
frontend/: .env.example  .firebaserc  .gitignore  Dockerfile  Dockerfile.dev  QUICK_START.md  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
instructors/: models.py  urls.py  views.py
job/: .dockerignore  .env.example  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.gpu  ERROR_HANDLING_VERIFICATION_SUMMARY.md  MEMORY_OPTIMIZATION_GUIDE.md  MEMORY_USAGE_VERIFICATION.md  README.md  build_gpu_image.sh  cloud-run-job.yaml  memory_usage_results.json  test_blueprint_parser.py  test_comprehensive_error_handling.py  test_connection_modes.py  test_database_connection.py  test_database_service.py  test_database_updates.py  test_e2e_error_handling.py  test_error_handling_verification.py  test_error_scenarios.py  test_exception_handling.py  test_job_performance.py  test_job_status_updates.py  test_main_env_params.py  test_memory_usage.py  test_retry_logic.py  test_storage_service.py  test_video_assembler.py
scripts/: README_EMBEDDING_GENERATION.md  README_MIGRATION.md  backup_embeddings.py  check_circular_dependencies.py  check_db_tables.sh  check_task_status.py  check_users.sh  cleanup_stuck_tasks.py  cleanup_tasks_via_proxy.sh  clear_embeddings.py  create_kibana_dashboards.py  deploy_all.sh  deploy_code_to_vm.sh  deploy_job_to_cloud_run.sh  deploy_to_cloud_run.sh  deploy_to_compute_engine.sh  deploy_to_production.sh  download_mmpose_models.py  empty_gcs_bucket.py  fix_cloud_build_permissions.sh  fix_cloud_run_db_connection.sh  fix_secret_permissions.sh  fix_video_paths.py  generate_embeddings.py  load_embeddings_to_cloud_sql.sh  migrate_to_blueprint_architecture.py  migrate_via_proxy.sh  performance_benchmark.py  restore_embeddings.py  run_cloud_migrations.sh  run_cloud_migrations_fast.sh  (+18 more)
(+315 files in other folders)
