[project]
name = "bachata-choreography-generator"
version = "0.1.0"
description = "AI-powered Bachata choreography generator that creates dance sequences from YouTube music"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "django-htmx>=1.17.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.5.0",
    "pytest-timeout>=2.1.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "yt-dlp>=2023.1.0",
    "librosa>=0.9.0",
    "mediapipe>=0.8.0",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "pydantic>=1.8.0",
    "httpx>=0.25.0",
    "tqdm>=4.62.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "psutil>=5.8.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
    "pytest-asyncio>=0.21.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.1.1",
    "google-cloud-secret-manager>=2.0.0",
    "elasticsearch>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "sentence-transformers>=2.0.0",
    "ultralytics>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-watch>=4.2.0",
]
